<resources>
    <string name="app_name">LabExam2</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_to_get_started">Sign up to get started</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="select_size">Select Size</string>
    <string name="my_cart">My Cart</string>
    <string name="pickup_time_hh_mm">Pickup Time (HH:MM)</string>
    <string name="total">Total:</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="quantity">Quantity</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="favorites">Favorites</string>
    <string name="find_your_best_coffee">Find your best coffee</string>
    <string name="hi_ovindi">Hi Ovindi,</string>
    <string name="order_now">Order Now</string>
    <string name="tired">Tired</string>
    <string name="focused">Focused</string>
    <string name="romantic">Romantic</string>
    <string name="happy">Happy</string>
    <string name="relaxed">Relaxed</string>
    <string name="energetic">Energetic</string>
    <string name="how_are_you_feeling_today">How are you feeling today?</string>
    <string name="mood_based_recommendations">Mood Based Recommendations</string>
    <string name="welcome_to_brewtique">Welcome to Brewtique!</string>
    <string name="pre_order_your_favorite_coffee_and_pick_it_up_hassle_free_no_waiting_just_grab_go_and_enjoy_your_perfect_brew">Pre-order your favorite coffee and pick it up hassle-free. No waiting—just grab, go, and enjoy your perfect brew!</string>
    <string name="next">Next</string>
    <string name="find_your_perfect_brew">Find Your Perfect Brew</string>
    <string name="explore_a_world_of_rich_flavors_and_aromatic_blends_whether_you_love_a_bold_espresso_or_a_creamy_latte_we_have_the_perfect_cup_waiting_for_you">Explore a world of rich flavors and aromatic blends. Whether you love a bold espresso or a creamy latte, we have the perfect cup waiting for you.</string>
    <string name="craving_an_energy_boost_or_a_moment_of_relaxation_let_us_find_the_perfect_coffee_to_match_your_mood_so_every_sip_feels_just_right">Craving an energy boost or a moment of relaxation? Let us find the perfect coffee to match your mood, so every sip feels just right.</string>
    <string name="get_started">Get Started</string>
    <string name="your_order_has_been_placed_successfully">Your order has been placed successfully</string>
    <string name="back_to_home">Back to Home</string>
    <string name="hi_priya">Hi, Priya</string>
    <string name="payment_details">Payment Details</string>
    <string name="pay">Pay</string>
    <string name="name_on_card">Name on Card</string>
</resources>