<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/payment_details"
        android:textColor="@color/caramel"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColorHint="@color/dark_brown"
        app:hintTextColor="@color/dark_brown"
        app:boxStrokeColor="@color/dark_brown">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Card Number"
            android:inputType="number"
            android:maxLength="16" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColorHint="@color/dark_brown"
        app:hintTextColor="@color/dark_brown"
        app:boxStrokeColor="@color/dark_brown">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cardName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_on_card"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textColorHint="@color/dark_brown"
        app:hintTextColor="@color/dark_brown"
        app:boxStrokeColor="@color/dark_brown">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:textColorHint="@color/dark_brown"
            app:hintTextColor="@color/dark_brown"
            app:boxStrokeColor="@color/dark_brown">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expiryDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789/"
                android:hint="MM/YY"
                android:inputType="textNoSuggestions"
                android:maxLength="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:textColorHint="@color/dark_brown"
            app:hintTextColor="@color/dark_brown"
            app:boxStrokeColor="@color/dark_brown">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="CVV"
                android:inputType="numberPassword"
                android:maxLength="3" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:textColor="@color/coffee_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/payButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/coffee_dark"
        android:padding="16dp"
        android:text="@string/pay"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>
